Closed
Bug 1429078
Opened 8 years ago
Closed 8 years ago
Crash in SubDocEnumCb
Categories
(Core :: Web Painting, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla59
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox57 | --- | unaffected |
| firefox58 | --- | unaffected |
| firefox59 | --- | fixed |
People
(Reporter: calixte, Assigned: mattwoodrow)
References
(Blocks 1 open bug)
Details
(Keywords: crash, regression, Whiteboard: [clouseau])
Crash Data
Attachments
(1 file)
|
1.88 KB,
patch
|
mikokm
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-0ddfd069-5221-4b26-82e0-67e880180109.
=============================================================
Top 10 frames of crashing thread:
0 xul.dll SubDocEnumCb layout/painting/RetainedDisplayListBuilder.cpp:554
1 xul.dll nsDocument::EnumerateSubDocuments dom/base/nsDocument.cpp:8693
2 xul.dll GetModifiedFrames layout/painting/RetainedDisplayListBuilder.cpp:582
3 xul.dll RetainedDisplayListBuilder::AttemptPartialUpdate layout/painting/RetainedDisplayListBuilder.cpp:835
4 xul.dll nsLayoutUtils::PaintFrame layout/base/nsLayoutUtils.cpp:3817
5 xul.dll mozilla::PresShell::Paint layout/base/PresShell.cpp:6485
6 xul.dll mozilla::dom::TabChild::RecvRenderLayers dom/ipc/TabChild.cpp:2777
7 xul.dll mozilla::dom::TabChild::ForcePaint dom/ipc/TabChild.cpp:3581
8 xul.dll `anonymous namespace'::HangMonitorChild::InterruptCallback dom/ipc/ProcessHangMonitor.cpp:346
9 xul.dll InterruptCallback dom/ipc/ProcessHangMonitor.cpp:1143
=============================================================
There is 5 crashes (from the same installation) in nightly 59 with buildid 20180109100117. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1418840.
[1] https://hg.mozilla.org/mozilla-central/rev/7d6ea086117d
Flags: needinfo?(matt.woodrow)
| Assignee | ||
Comment 1•8 years ago
|
||
Assignee: nobody → matt.woodrow
Flags: needinfo?(matt.woodrow)
Attachment #8941301 -
Flags: review?(mikokm)
| Assignee | ||
Updated•8 years ago
|
Priority: -- → P1
Comment 2•8 years ago
|
||
Comment on attachment 8941301 [details] [diff] [review]
subdoc-crash
Review of attachment 8941301 [details] [diff] [review]:
-----------------------------------------------------------------
LGTM.
Attachment #8941301 -
Flags: review?(mikokm) → review+
Pushed by mwoodrow@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/0656d11f1328
Handle the case where the subdoc view doesn't have a frame. r=miko
Comment 4•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
| Reporter | ||
Comment 5•8 years ago
|
||
There still are 112 crashes in nightly 59/60 starting with buildid 20180117100129 (the first build after the patch landed).
Comment 6•8 years ago
|
||
Matt, can you take a second look since we still have crashes showing up?
Flags: needinfo?(matt.woodrow)
| Assignee | ||
Comment 7•8 years ago
|
||
I think bug 1430258 will resolve the remainder of the issues here.
Flags: needinfo?(matt.woodrow)
| Assignee | ||
Updated•8 years ago
|
Status: REOPENED → RESOLVED
Closed: 8 years ago → 8 years ago
Resolution: --- → FIXED
Updated•8 years ago
|
status-firefox60:
affected → ---
You need to log in
before you can comment on or make changes to this bug.
Description
•