Bug 1429078 - Handle the case where the subdoc view doesn't have a frame. r=miko

--HG--
extra : rebase_source : badce58f07f66a7a0146f51792463c08a75506f1